--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   tflite : ^1.0.4
   image_picker: ^0.6.1+8
   image : ^2.1.4
+  camera : any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
